--- a/src/scss/components/_searchbar.scss
+++ b/src/scss/components/_searchbar.scss
@@ -13,7 +13,7 @@
 	display: flex;
 	align-items: center;
 	padding: 0 $default-padding-x-touch;
-	background: #f5f5f5;
+	background: var(--color-toolbar);
 	z-index: $z-index-search-bar;
 
 	.input-group.search {
