--- a/src/scss/themes/_dark.scss
+++ b/src/scss/themes/_dark.scss
@@ -67,7 +67,6 @@ $-colors: (
 
 	color-dnd-target-outline: #cfdcf9,
 	color-collection-tree-shadow: #e3e3e3, //mix($touch-collection-tree-border, $sidebar-bg, 50%)
-	touch-tag-placelhoder: #f3f3f3, //tint($shade-2, 50%)
 	color-tab-headings-bg: #f0f0f0, //shade($shade-1, 4%);
 	color-item-list-second-row: #888, //mix($body-bg, $text-color, 50%);
 	color-panel-backdrop-bg: rgba(0, 0, 0, 0.1), //rgba($shade-10, 0.1)
