--- a/src/scss/themes/_light.scss
+++ b/src/scss/themes/_light.scss
@@ -69,7 +69,6 @@ $-colors: (
 
 	color-dnd-target-outline: #393939,
 	color-collection-tree-shadow: #e3e3e3, //mix($shade-4, $sidebar-bg, 50%)
-	touch-tag-placelhoder: #f3f3f3, //tint($shade-2, 50%)
 	color-tab-headings-bg: #f0f0f0, //shade($shade-1, 4%);
 	color-item-list-second-row: #888, //mix($body-bg, $text-color, 50%);
 	color-panel-backdrop-bg: rgba(0, 0, 0, 0.1), //rgba($shade-10, 0.1)
